Added: Blog-Posts around PGP, bouquets and floral arrangements, as well as a few UNDER CONSTRUCTION pages

--- a/GnuPG/index.html
+++ b/GnuPG/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8" />
 <title>Verschlüsselung mit PGP</title>
-<meta http-equiv="refresh" content="0; URL=/blog/internetsecurity/GnuPG/">
+<meta http-equiv="refresh" content="0; URL=/blog/privacy/GnuPG/">
 </head>
 <body>
 <h1>Ihr Browser unterstützt keine Weiterleitung. Bitte auf folgenden Link klicken:</h1>
-<p><a href="/blog/internetsecurity/GnuPG/">https://niemeczek.at/blog/internetsecurity/GnuPG/</a></p>
+<p><a href="/blog/privacy/GnuPG/">https://niemeczek.at/blog/privacy/GnuPG/</a></p>
 </body>
 </html>
